<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="themes">Темная тема</string>
    <string name="app_share">Поделиться приложением</string>
    <string name="playlist_share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="support_write">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="pr_ya_android_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="mailto">mailto:</string>
    <string name="developer_mail">hr.misha@yandex.ru</string>
    <string name="subject_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="body_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="pr_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="playlist_empty">Вы не создали\n ни одного плейлиста</string>
    <string name="errors_connecting">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="button_update">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="button_del_history_search">Очистить историю</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tab">Избранные треки</string>
    <string name="playlist_tab">Плейлисты</string>
    <string name="description_poster_player">Изображение трека</string>
    <string name="description_img_playlist">Изображение плейлиста</string>
    <string name="description_placeholder">Изоборажение-заглушка.</string>
    <string name="description_button_add">Добавить трек плейлист</string>
    <string name="description_button_play">Играть</string>
    <string name="description_button_heart">Добавить трек в любимые</string>
    <string name="description_player_duration">Длительность</string>
    <string name="description_player_alb">Альбом</string>
    <string name="description_player_year">Год</string>
    <string name="description_player_genre">Жанр</string>
    <string name="description_player_country">Страна</string>
    <string name="start_time">00:00</string>
    <string name="playback_error">Воспроизведение невозможно! Нет такого файла или каталога</string>
    <string name="create">Создать</string>
    <string name="hint_name_playlist">Название*</string>
    <string name="hint_description_playlist">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="image_not_select">Image not select</string>
    <string name="permission_denied">Permission to access the storage is denied.</string>
    <string name="rationale_permission_on_storage">Данное разрешения необходимо для добавления картинки к плейлисту</string>
    <string name="title_playlist_dialog">Завершить создание плейлиста?</string>
    <string name="message_playlist_dialog">Все несохраненные данные будут потеряны</string>
    <string name="cancel_playlist_dialog">Отмена</string>d
    <string name="complete_playlist_dialog">Завершить</string>
    <string name="message_split_playlist_pOne">Плейлист</string>
    <string name="message_split_playlist_pTwo">создан</string>
    <string name="error_add_playlist">Error additing data in database, or commands is not allowed!</string>
    <string name="error_match_playlist">Error, operation \'match\' impossible!</string>
    <string name="error_init_playlist">Error initialized playlist.Check Db work.</string>
    <string name="error_query_db">Error query in database.Please check chains methods work correct with database.</string>
    <string name="track_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="track_add_done">Добавлено в плейлист</string>
    <string name="option_one_for_one_track">трек</string>
    <string name="option_two_for_one_track">трека</string>
    <string name="option_one_for_many_tracks">треков</string>
    <string name="option_one_for_minutes">минута</string>
    <string name="option_two_for_minutes">минуты</string>
    <string name="option_three_for_minutes">минут</string>
    <string name="no_tracks">В плейлисте нет треков</string>
    <string name="message_about_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="message_about_delete_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="title_del_track_dialog">Удалить трек</string>
    <string name="title_del_playlist_dialog">Удалить плейлист</string>
    <string name="positive_playlist_dialog">Удалить</string>
    <string name="message_no_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>


</resources>