<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerPlayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        />

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".player.ui.PlayerActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    style="@style/ConstraintMain"
    tools:context=".player.ui.PlayerActivity">


    <androidx.constraintlayout.widget.Guideline
        style="@style/PlayerGuideLine"
        android:id="@+id/left_border_16"
        app:layout_constraintGuide_begin="@dimen/before_item"
        />

    <androidx.constraintlayout.widget.Guideline
        style="@style/PlayerGuideLine"
        android:id="@+id/left_border_24"
        app:layout_constraintGuide_begin="@dimen/item_marginStart_medium"
        />

    <androidx.constraintlayout.widget.Guideline
        style="@style/PlayerGuideLine"
        android:id="@+id/right_border_16"
        app:layout_constraintGuide_end="@dimen/after_item"
        />

    <androidx.constraintlayout.widget.Guideline
        style="@style/PlayerGuideLine"
        android:id="@+id/right_border_24"
        app:layout_constraintGuide_end="@dimen/item_marginEnd_medium"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_border"
        style="@style/PlayerGuideLine"
        app:layout_constraintGuide_begin="0dp" />

    <Button
        android:id="@+id/back_button_player"
        style="@style/StyleBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/poster"
        />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="@id/left_border_24"
        app:layout_constraintEnd_toEndOf="@id/right_border_24"
        app:layout_constraintTop_toBottomOf="@id/back_button_player"
        app:layout_constraintBottom_toTopOf="@id/track_name"
        app:layout_constraintDimensionRatio="h,1:1"
        tools:src="@drawable/placeholder_45x45"
        android:contentDescription="@string/description_poster_player"/>

        <TextView
        style="@style/PlayerTextLine"
        android:id="@+id/track_name"
        android:textSize="@dimen/high_text"
        android:layout_marginTop="@dimen/item_marginTop_high"
        app:layout_constraintStart_toStartOf="@id/left_border_24"
        app:layout_constraintEnd_toEndOf="@id/right_border_24"
        app:layout_constraintTop_toBottomOf="@id/poster"
        app:layout_constraintBottom_toTopOf="@id/artist_name"
        tools:text="Yesterday (Remastered 2009)"
        />

    <TextView
        style="@style/PlayerTextLine"
        android:id="@+id/artist_name"
        android:textSize="@dimen/line_of_text"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/left_border_24"
        app:layout_constraintEnd_toEndOf="@id/right_border_24"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        app:layout_constraintBottom_toTopOf="@id/button_play"
        tools:text="The Beatles"
        />

    <ImageButton
        style="@style/PlayerButtonsAdd"
        android:id="@+id/button_add"
        android:background="@drawable/button_add"
        android:contentDescription="@string/description_button_add"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        app:layout_constraintStart_toStartOf="@id/left_border_24"
        app:layout_constraintEnd_toStartOf="@id/button_play"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        />

    <ImageButton
        style="@style/PlayerPlaybackButton"
        android:id="@+id/button_play"
        android:contentDescription="@string/description_button_play"
        app:layout_constraintStart_toEndOf="@id/button_add"
        app:layout_constraintEnd_toStartOf="@id/button_heart"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        app:layout_constraintBottom_toTopOf="@id/time_playing_track"
        />

    <ImageButton
        android:id="@+id/button_heart"
        style="@style/PlayerButtAddFavorite"
        android:background="@drawable/button_heart"
        android:contentDescription="@string/description_button_heart"
        app:layout_constraintEnd_toEndOf="@id/right_border_24"
        app:layout_constraintStart_toEndOf="@id/button_play"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        />

    <TextView
        style="@style/PlayerTextLine"
        android:id="@+id/time_playing_track"
        android:textSize="@dimen/line_of_text"
        android:layout_marginTop="12dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/left_border_24"
        app:layout_constraintEnd_toEndOf="@id/right_border_24"
        app:layout_constraintTop_toBottomOf="@id/button_play"
        app:layout_constraintBottom_toTopOf="@id/duration"
        android:text="@string/start_time"
        />


    <TextView
        style="@style/DescriptionTrackPlayer"
        android:id="@+id/duration"
        android:text="@string/description_player_duration"
        android:layout_marginTop="@dimen/margin_top_medium"
        app:layout_constraintTop_toBottomOf="@id/time_playing_track"
        app:layout_constraintStart_toStartOf="@id/left_border_16"
        app:layout_constraintBottom_toTopOf="@id/album"
        />

    <TextView
        style="@style/CurrentDescriptionTrackPlayer"
        android:id="@+id/time_track"
        android:layout_marginTop="@dimen/margin_top_medium"
        app:layout_constraintBaseline_toBaselineOf="@id/duration"
        app:layout_constraintTop_toBottomOf="@id/time_playing_track"
        app:layout_constraintEnd_toEndOf="@id/right_border_16"
        app:layout_constraintStart_toEndOf="@id/center_border"
        tools:text="5:35"
        />

    <TextView
        style="@style/DescriptionTrackPlayer"
        android:id="@+id/album"
        android:text="@string/description_player_alb"
        android:layout_marginTop="@dimen/margin_top_low"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintStart_toStartOf="@id/left_border_16"
        app:layout_constraintBottom_toTopOf="@id/year"
        />

    <TextView
        style="@style/CurrentDescriptionTrackPlayer"
        android:id="@+id/current_album"
        android:layout_marginTop="@dimen/margin_top_low"
        android:layout_marginStart="@dimen/item_marginStart_veryLow"
        app:layout_constraintBaseline_toBaselineOf="@id/album"
        app:layout_constraintTop_toBottomOf="@id/time_track"
        app:layout_constraintStart_toEndOf="@id/album"
        app:layout_constraintEnd_toEndOf="@id/right_border_16"
        tools:text="Yesterday (Remastered 2009)"
        />

    <TextView
        style="@style/DescriptionTrackPlayer"
        android:id="@+id/year"
        android:text="@string/description_player_year"
        android:layout_marginTop="@dimen/margin_top_low"
        app:layout_constraintTop_toBottomOf="@id/album"
        app:layout_constraintStart_toStartOf="@id/left_border_16"
        app:layout_constraintBottom_toTopOf="@id/genre"
        />

    <TextView
        style="@style/CurrentDescriptionTrackPlayer"
        android:id="@+id/current_year"
        android:layout_marginTop="@dimen/margin_top_low"
        app:layout_constraintBaseline_toBaselineOf="@id/year"
        app:layout_constraintTop_toBottomOf="@id/current_album"
        app:layout_constraintStart_toEndOf="@id/center_border"
        app:layout_constraintEnd_toEndOf="@id/right_border_16"
        tools:text="1965"
        />

    <TextView
        style="@style/DescriptionTrackPlayer"
        android:id="@+id/genre"
        android:text="@string/description_player_genre"
        android:layout_marginTop="@dimen/margin_top_low"
        app:layout_constraintTop_toBottomOf="@id/year"
        app:layout_constraintStart_toStartOf="@id/left_border_16"
        app:layout_constraintBottom_toTopOf="@id/country"
        />

    <TextView
        style="@style/CurrentDescriptionTrackPlayer"
        android:id="@+id/current_genre"
        android:layout_marginTop="@dimen/margin_top_low"
        app:layout_constraintBaseline_toBaselineOf="@id/genre"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintStart_toEndOf="@id/center_border"
        app:layout_constraintEnd_toEndOf="@id/right_border_16"
        tools:text="Rock"
        />

    <TextView
        style="@style/DescriptionTrackPlayer"
        android:id="@+id/country"
        android:text="@string/description_player_country"
        android:layout_marginTop="@dimen/margin_top_low"
        android:layout_marginBottom="28dp"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintStart_toStartOf="@id/left_border_16"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        style="@style/CurrentDescriptionTrackPlayer"
        android:id="@+id/current_country"
        android:layout_marginTop="@dimen/margin_top_low"
        app:layout_constraintBaseline_toBaselineOf="@id/country"
        app:layout_constraintTop_toBottomOf="@id/current_genre"
        app:layout_constraintStart_toEndOf="@id/center_border"
        app:layout_constraintEnd_toEndOf="@id/right_border_16"
        tools:text="Великобритания"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"
        />

<LinearLayout
    android:id="@+id/bottom_sheet_playlist"
    style="@style/BottomSheetLinearLayout"
    >

<View
    style="@style/BottomSheetHandle"
    />

    <TextView
        style="@style/TitleBottomSheet"
        android:text="@string/add_to_playlist"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_playlist_player"
        style="@style/ButtonMedium"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="@string/new_playlist" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_playlist_player"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

</LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>